--- a/client/src/styles/base/animations.css
+++ b/client/src/styles/base/animations.css
@@ -21,3 +21,20 @@
   animation-iteration-count: infinite;
   animation-name: pulsate;
 }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+.moveInBottom {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
+}
