--- a/client/src/layout/Row/Row.module.css
+++ b/client/src/layout/Row/Row.module.css
@@ -1,6 +1,7 @@
 .row {
-  max-width: 75rem;
+  max-width: 90rem;
   margin: 0 auto;
+  padding: 1.8rem;
 
   &:not(:last-child) {
     margin-bottom: $guttervertical;
